@@ -44,6 +44,8 @@ namespace WebCore {
         static QTextBoundaryFinder* iterator = 0;
         static const UChar* cachedString = 0;
         static int cachedLength = 0;
+        if (!string)
+            return 0;
         if (string != cachedString || length != cachedLength) {
             if (!iterator)
                 iterator = new QTextBoundaryFinder;
@@ -64,6 +66,8 @@ namespace WebCore {
         static QTextBoundaryFinder* iterator = 0;
         static const UChar* cachedString = 0;
         static int cachedLength = 0;
+        if (!string)
+            return 0;
         if (string != cachedString || length != cachedLength) {
             if (!iterator)
                 iterator = new QTextBoundaryFinder;
@@ -84,6 +88,8 @@ namespace WebCore {
         static QTextBoundaryFinder *iterator = 0;
         static const UChar *cachedString = 0;
         static int cachedLength = 0;
+        if (!string)
+            return 0;
         if (string != cachedString || length != cachedLength) {
             if (!iterator)
                 iterator = new QTextBoundaryFinder;
@@ -104,6 +110,8 @@ namespace WebCore {
         static QTextBoundaryFinder* iterator = 0;
         static const UChar* cachedString = 0;
         static int cachedLength = 0;
+        if (!string)
+            return 0;
         if (string != cachedString || length != cachedLength) {
             if (!iterator)
                 iterator = new QTextBoundaryFinder;
